# json_to_class

./: Cargo.toml
src/: lib.rs
src/generators/: dart_generator.rs  mod.rs
tests/: json_to_class_test.rs
